@@ -3,7 +3,6 @@ package ai.timefold.solver.core.impl;
 import java.util.Collection;
 import java.util.List;
 import java.util.Objects;
-import java.util.stream.Collectors;
 
 import ai.timefold.solver.core.api.domain.solution.PlanningSolution;
 import ai.timefold.solver.core.config.AbstractConfig;
@@ -19,7 +18,7 @@ public abstract class AbstractFromConfigFactory<Solution_, Config_ extends Abstr
 
     protected final Config_ config;
 
-    public AbstractFromConfigFactory(Config_ config) {
+    protected AbstractFromConfigFactory(Config_ config) {
         this.config = config;
     }
 
@@ -55,12 +54,12 @@ public abstract class AbstractFromConfigFactory<Solution_, Config_ extends Abstr
             Class<?> entityClass) {
         EntityDescriptor<Solution_> entityDescriptor = solutionDescriptor.getEntityDescriptorStrict(entityClass);
         if (entityDescriptor == null) {
-            throw new IllegalArgumentException("The config (" + config
-                    + ") has an entityClass (" + entityClass + ") that is not a known planning entity.\n"
-                    + "Check your solver configuration. If that class (" + entityClass.getSimpleName()
-                    + ") is not in the entityClassSet (" + solutionDescriptor.getEntityClassSet()
-                    + "), check your @" + PlanningSolution.class.getSimpleName()
-                    + " implementation's annotated methods too.");
+            throw new IllegalArgumentException(
+                    """
+                            The config (%s) has an entityClass (%s) that is not a known planning entity.
+                            Check your solver configuration. If that class (%s) is not in the entityClassSet (%s), check your @%s implementation's annotated methods too."""
+                            .formatted(config, entityClass, entityClass.getSimpleName(), solutionDescriptor.getEntityClassSet(),
+                                    PlanningSolution.class.getSimpleName()));
         }
         return entityDescriptor;
     }
@@ -68,10 +67,23 @@ public abstract class AbstractFromConfigFactory<Solution_, Config_ extends Abstr
     protected EntityDescriptor<Solution_> getTheOnlyEntityDescriptor(SolutionDescriptor<Solution_> solutionDescriptor) {
         Collection<EntityDescriptor<Solution_>> entityDescriptors = solutionDescriptor.getGenuineEntityDescriptors();
         if (entityDescriptors.size() != 1) {
-            throw new IllegalArgumentException("The config (" + config
-                    + ") has no entityClass configured and because there are multiple in the entityClassSet ("
-                    + solutionDescriptor.getEntityClassSet()
-                    + "), it cannot be deduced automatically.");
+            throw new IllegalArgumentException(
+                    "The config (%s) has no entityClass configured and because there are multiple in the entityClassSet (%s), it cannot be deduced automatically."
+                            .formatted(config, solutionDescriptor.getEntityClassSet()));
+        }
+        return entityDescriptors.iterator().next();
+    }
+
+    protected EntityDescriptor<Solution_>
+            getTheOnlyEntityDescriptorWithBasicVariables(SolutionDescriptor<Solution_> solutionDescriptor) {
+        Collection<EntityDescriptor<Solution_>> entityDescriptors = solutionDescriptor.getGenuineEntityDescriptors()
+                .stream()
+                .filter(EntityDescriptor::hasAnyGenuineBasicVariables)
+                .toList();
+        if (entityDescriptors.size() != 1) {
+            throw new IllegalArgumentException(
+                    "The config (%s) has no entityClass configured and because there are multiple in the entityClassSet (%s) defining basic variables, it cannot be deduced automatically."
+                            .formatted(config, solutionDescriptor.getEntityClassSet()));
         }
         return entityDescriptors.iterator().next();
     }
@@ -87,11 +99,11 @@ public abstract class AbstractFromConfigFactory<Solution_, Config_ extends Abstr
             String variableName) {
         GenuineVariableDescriptor<Solution_> variableDescriptor = entityDescriptor.getGenuineVariableDescriptor(variableName);
         if (variableDescriptor == null) {
-            throw new IllegalArgumentException("The config (" + config
-                    + ") has a variableName (" + variableName
-                    + ") which is not a valid planning variable on entityClass ("
-                    + entityDescriptor.getEntityClass() + ").\n"
-                    + entityDescriptor.buildInvalidVariableNameExceptionMessage(variableName));
+            throw new IllegalArgumentException(
+                    """
+                            The config (%s) has a variableName (%s) which is not a valid planning variable on entityClass (%s).
+                            %s""".formatted(config, variableName, entityDescriptor.getEntityClass(),
+                            entityDescriptor.buildInvalidVariableNameExceptionMessage(variableName)));
         }
         return variableDescriptor;
     }
@@ -100,11 +112,10 @@ public abstract class AbstractFromConfigFactory<Solution_, Config_ extends Abstr
         List<GenuineVariableDescriptor<Solution_>> variableDescriptorList =
                 entityDescriptor.getGenuineVariableDescriptorList();
         if (variableDescriptorList.size() != 1) {
-            throw new IllegalArgumentException("The config (" + config
-                    + ") has no configured variableName for entityClass (" + entityDescriptor.getEntityClass()
-                    + ") and because there are multiple variableNames ("
-                    + entityDescriptor.getGenuineVariableNameSet()
-                    + "), it cannot be deduced automatically.");
+            throw new IllegalArgumentException(
+                    "The config (%s) has no configured variableName for entityClass (%s) and because there are multiple variableNames (%s), it cannot be deduced automatically."
+                            .formatted(config, entityDescriptor.getEntityClass(),
+                                    entityDescriptor.getGenuineVariableNameSet()));
         }
         return variableDescriptorList.iterator().next();
     }
@@ -122,10 +133,10 @@ public abstract class AbstractFromConfigFactory<Solution_, Config_ extends Abstr
                 .map(variableNameInclude -> variableDescriptorList.stream()
                         .filter(variableDescriptor -> variableDescriptor.getVariableName().equals(variableNameInclude))
                         .findFirst()
-                        .orElseThrow(() -> new IllegalArgumentException("The config (" + config
-                                + ") has a variableNameInclude (" + variableNameInclude
-                                + ") which does not exist in the entity (" + entityDescriptor.getEntityClass()
-                                + ")'s variableDescriptorList (" + variableDescriptorList + ").")))
-                .collect(Collectors.toList());
+                        .orElseThrow(() -> new IllegalArgumentException(
+                                "The config (%s) has a variableNameInclude (%s) which does not exist in the entity (%s)'s variableDescriptorList (%s)."
+                                        .formatted(config, variableNameInclude, entityDescriptor.getEntityClass(),
+                                                variableDescriptorList))))
+                .toList();
     }
 }
